# AI_solo_coder_task_A_146

backend/: Cargo.toml
backend/src/: alarm.rs  alarm_ws.rs  clickhouse.rs  dtu_receiver.rs  handlers.rs  main.rs  models.rs  pointing.rs  pointing_analyzer.rs  transmission.rs  transmission_simulator.rs  ws.rs
clickhouse/: init.sql
frontend/: index.html
simulator/: hunyi_simulator.py
