[package]
name = "hunyi-backend"
version = "0.1.0"
edition = "2021"
description = "古代浑仪机械传动误差仿真与天体指向精度分析系统后端"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix-web-actors = "4.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
tokio-tungstenite = "0.21"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
